--- a/catalog.html
+++ b/catalog.html
@@ -148,41 +148,40 @@
       <a class="breadcrumbs__link">Моноподы для селфи</a>
     </section>
 
-    <section class="sort">
-      <div class="sort__inner">
-
-      <h3 class="sort__title">
-        Сортировка:
-      </h3>
-
-      <div class="sort__list">
-        <a href="#" class="sort__item  sort__item--active">
-          По цене
-        </a>
-        <a href="#" class="sort__item">
-          По типу
-        </a>
-        <a href="#" class="sort__item">
-          По популярности
-        </a>
-      </div>
-
-      <div class="sort__controls">
-        <a class="sort__control  sort__control--up">
-          <span class="visually-hidden">Сортировка по возрастанию</span>
-        </a>
-        <a class="sort__control  sort__control--down  sort__control--active">
-          <span class="visually-hidden">Сортировка по убыванию</span>
-        </a>
-      </div>
-
-
-    </div>
-    </section>
-
 <!-- Обертка для фильтра и каталога -->
 
    <div class="main-content__inner">
+     <section class="sort">
+       <div class="sort__inner">
+
+       <h3 class="sort__title">
+         Сортировка:
+       </h3>
+
+       <div class="sort__list">
+         <a href="#" class="sort__item  sort__item--active">
+           По цене
+         </a>
+         <a href="#" class="sort__item">
+           По типу
+         </a>
+         <a href="#" class="sort__item">
+           По популярности
+         </a>
+       </div>
+
+       <div class="sort__controls">
+         <a class="sort__control  sort__control--up">
+           <span class="visually-hidden">Сортировка по возрастанию</span>
+         </a>
+         <a class="sort__control  sort__control--down  sort__control--active">
+           <span class="visually-hidden">Сортировка по убыванию</span>
+         </a>
+       </div>
+
+
+     </div>
+     </section>
 
      <section class="filter">
 
@@ -221,19 +220,19 @@
             </legend>
 
             <input type="checkbox" name="check-color" value="black" id="check_black" checked>
-            <label class="filter__checkbox" for="check_black">Черный</label>
+            <label class="filter__checkbox" for="check_black" tabindex="0">Черный</label>
 
             <input type="checkbox" name="check-color" value="white" id="check_white">
-            <label class="filter__checkbox" for="check_white">Белый</label>
+            <label class="filter__checkbox" for="check_white" tabindex="0">Белый</label>
 
             <input type="checkbox" name="check-color" value="blue" id="check_blue" checked>
-            <label class="filter__checkbox" for="check_blue">Синий</label>
+            <label class="filter__checkbox" for="check_blue" tabindex="0">Синий</label>
 
             <input type="checkbox" name="check-color" value="red" id="check_red" checked>
-            <label class="filter__checkbox" for="check_red">Красный</label>
+            <label class="filter__checkbox" for="check_red" tabindex="0">Красный</label>
 
             <input type="checkbox" name="check-color" value="pink" id="check_pink">
-            <label class="filter__checkbox" for="check_pink">Розовый</label>
+            <label class="filter__checkbox" for="check_pink" tabindex="0">Розовый</label>
 
           </fieldset>
 
@@ -243,10 +242,10 @@
             </legend>
 
             <input type="radio" name="radio-check" value="check-yes" id="check_yes" checked>
-            <label class="filter__radio" for="check_yes">Есть</label>
+            <label class="filter__radio" for="check_yes" tabindex="0">Есть</label>
 
             <input type="radio" name="radio-check" value="check-no" id="check_no">
-            <label class="filter__radio" for="check_no">Нет</label>
+            <label class="filter__radio" for="check_no" tabindex="0">Нет</label>
 
           </fieldset>
 
