--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
-<!-- можно как-нито попроще убрать отсюда svg? -->
+
     <svg style="display:none">
       <symbol id="cart" viewBox="0 0 12 12"><path d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z"/><path d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z"/></symbol>
       <symbol id="compare" viewBox="0 0 10 10"><path d="M8 2h1.984v8H8zM0 3h1.984v7H0zm4-3h2v10H4z"/></symbol>
@@ -21,7 +21,7 @@
 
      <div class="main-header__navigation">
 
-      <a class="logo">Device</a>
+       <a class="logo">Device</a>
 
 
        <form class="search-form" method="get" action="/">
@@ -59,75 +59,78 @@
        </div>
 
 
-  <nav class="main-nav">
+       <nav class="main-nav">
 
-    <ul class="main-nav__list">
-      <li class="main-nav__item  main-nav__item--sub">
-        <a class="main-nav__link  main-nav__link--sub" href="catalog.html">
-          Каталог товаров
-        </a>
+         <ul class="main-nav__list">
+           <li class="main-nav__item  main-nav__item--sub">
+             <a class="main-nav__link  main-nav__link--sub" href="catalog.html">
+               Каталог товаров
+             </a>
 
-          <div class="sub-nav">
-            <ul class="sub-nav__list">
-              <li class="sub-nav__item">
-                <a class="sub-nav__link" href="#">
-                  Виртуальная реальность
-                </a>
-              </li>
-              <li class="sub-nav__item">
-                <a class="sub-nav__link" href="catalog.html">
-                  Моноподы для селфи
-                </a>
-              </li>
-              <li class="sub-nav__item">
-                <a class="sub-nav__link" href="#">
-                  Экшн-камеры
-                </a>
-              </li>
-            </ul>
-            <ul class="sub-nav__list">
-              <li class="sub-nav__item">
-                <a class="sub-nav__link" href="#">
-                  Фитнес-браслеты
-                </a>
-              </li>
-              <li class="sub-nav__item">
-                <a class="sub-nav__link" href="#">
-                  Умные часы
-                </a>
-              </li>
-            </ul>
-            <ul class="sub-nav__list">
-              <li class="sub-nav__item">
-                <a class="sub-nav__link" href="#">
-                  Квадракоптеры
-                </a>
-              </li>
-            </ul>
-          </div>
+               <div class="sub-nav">
 
-      </li>
-    </ul>
+                 <ul class="sub-nav__list">
+                   <li class="sub-nav__item">
+                     <a class="sub-nav__link" href="#">
+                       Виртуальная реальность
+                     </a>
+                   </li>
+                   <li class="sub-nav__item">
+                     <a class="sub-nav__link" href="catalog.html">
+                       Моноподы для селфи
+                     </a>
+                   </li>
+                   <li class="sub-nav__item">
+                     <a class="sub-nav__link" href="#">
+                       Экшн-камеры
+                     </a>
+                   </li>
+                 </ul>
 
-    <ul class="main-nav__list">
-      <li class="main-nav__item  main-nav__item--delivery">
-        <a class="main-nav__link" href="#">
-          Доставка
-        </a>
-      </li>
-      <li class="main-nav__item">
-        <a class="main-nav__link" href="#">
-          Гарантия
-        </a>
-      </li>
-      <li class="main-nav__item  main-nav__item--contacts">
-        <a class="main-nav__link" href="#">
-          Контакты
-        </a>
-      </li>
-    </ul>
+                 <ul class="sub-nav__list">
+                   <li class="sub-nav__item">
+                     <a class="sub-nav__link" href="#">
+                       Фитнес-браслеты
+                     </a>
+                   </li>
+                   <li class="sub-nav__item">
+                     <a class="sub-nav__link" href="#">
+                       Умные часы
+                     </a>
+                   </li>
+                 </ul>
 
-  </nav>
+                 <ul class="sub-nav__list">
+                   <li class="sub-nav__item">
+                     <a class="sub-nav__link" href="#">
+                       Квадракоптеры
+                     </a>
+                   </li>
+                 </ul>
+
+               </div>
+            </li>
+          </ul>
+
+         <ul class="main-nav__list">
+           <li class="main-nav__item  main-nav__item--delivery">
+             <a class="main-nav__link" href="#">
+               Доставка
+             </a>
+           </li>
+           <li class="main-nav__item">
+             <a class="main-nav__link" href="#">
+               Гарантия
+             </a>
+           </li>
+           <li class="main-nav__item  main-nav__item--contacts">
+             <a class="main-nav__link" href="#">
+               Контакты
+             </a>
+           </li>
+         </ul>
+
+       </nav>
 
      </div>
 
@@ -139,91 +142,91 @@
 
     <div class="slider__inner">
       <div class="slider__slides">
-       <section class="slider__slide slider__slide--first">
-        <div class="slider__content">
-         <h2 class="slider__title">
-           Делай селфи, как&nbsp;Бен&nbsp;Стиллер!
-         </h2>
-         <p class="slider__description">
-           Самая длинная палка для селфи доступна в&nbsp;нашем магазине.
-           Восемь&nbsp;(Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.
-         </p>
-         <a class="button  button--slider" href="#">
-           Подробнее
-         </a>
+        <section class="slider__slide slider__slide--first">
+         <div class="slider__content">
+           <h2 class="slider__title">
+             Делай селфи, как&nbsp;Бен&nbsp;Стиллер!
+           </h2>
+           <p class="slider__description">
+             Самая длинная палка для селфи доступна в&nbsp;нашем магазине.
+               Восемь&nbsp;(Восемь, Карл!) метров длиной и&nbsp;весом всего   5&nbsp;килограмм.
+           </p>
+           <a class="button  button--slider" href="#">
+             Подробнее
+           </a>
 
-         <table class="slider__info">
-           <tr class="slider__row  slider__row--top">
-             <th>8,5 м</th>
-             <th>5 кг</th>
-             <th>Карбон</th>
-           </tr>
-           <tr class="slider__row">
-             <td>Длина палки</td>
-             <td>Вес палки</td>
-             <td>Материал</td>
-           </tr>
-         </table>
-        </div>
-       </section>
+           <table class="slider__info">
+             <tr class="slider__row  slider__row--top">
+               <th>8,5 м</th>
+               <th>5 кг</th>
+               <th>Карбон</th>
+             </tr>
+             <tr class="slider__row">
+               <td>Длина палки</td>
+               <td>Вес палки</td>
+               <td>Материал</td>
+             </tr>
+           </table>
+          </div>
+         </section>
 
-       <section class="slider__slide  slider__slide--second">
+        <section class="slider__slide  slider__slide--second">
+
+          <div class="slider__content">
+          <h2 class="slider__title">
+            Худеем<br> правильно!
+          </h2>
+          <p class="slider__description">
+            Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы
+            не&nbsp;пропускать занятия и&nbsp;соблюдать диету.
+          </p>
+          <a class="button  button--slider" href="#">
+            Подробнее
+          </a>
+
+          <table class="slider__info">
+            <tr class="slider__row">
+              <th>48 часов</th>
+            </tr>
+            <tr class="slider__row">
+              <td>Без подзарядки</td>
+            </tr>
+          </table>
+         </div>
+        </section>
+
+        <section class="slider__slide  slider__slide--third">
 
          <div class="slider__content">
-         <h2 class="slider__title">
-           Худеем<br> правильно!
-         </h2>
-         <p class="slider__description">
-           Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы
-           не&nbsp;пропускать занятия и&nbsp;соблюдать диету.
-         </p>
-         <a class="button  button--slider" href="#">
-           Подробнее
-         </a>
+           <h2 class="slider__title">
+             Порхает как бабочка, жалит как пчела!
+           </h2>
+           <p class="slider__description">
+             Этот обычный, на&nbsp;первый взгляд, квадрокоптер оснащен   мощным&nbsp;лазером, замаскированным под стандартную камеру.
+           </p>
+           <a class="button  button--slider" href="#">
+             Подробнее
+           </a>
 
-         <table class="slider__info">
-           <tr class="slider__row">
-             <th>48 часов</th>
-           </tr>
-           <tr class="slider__row">
-             <td>Без подзарядки</td>
-           </tr>
-         </table>
-        </div>
-       </section>
-
-       <section class="slider__slide  slider__slide--third">
-
-         <div class="slider__content">
-         <h2 class="slider__title">
-           Порхает как бабочка, жалит как пчела!
-         </h2>
-         <p class="slider__description">
-           Этот обычный, на&nbsp;первый взгляд, квадрокоптер оснащен мощным&nbsp;лазером, замаскированным под стандартную камеру.
-         </p>
-         <a class="button  button--slider" href="#">
-           Подробнее
-         </a>
-
-         <table class="slider__info">
-           <tr class="slider__row">
-             <th>800 м</th>
-             <th>50 м</th>
-           </tr>
-           <tr class="slider__row">
-             <td>Дальность полета</td>
-             <td>Радиус поражения</td>
-           </tr>
-         </table>
-        </div>
-       </section>
-     </div>
-   </div>
+           <table class="slider__info">
+             <tr class="slider__row">
+               <th>800 м</th>
+               <th>50 м</th>
+             </tr>
+             <tr class="slider__row">
+               <td>Дальность полета</td>
+               <td>Радиус поражения</td>
+             </tr>
+           </table>
+          </div>
+        </section>
+      </div>
+    </div>
 
        <div class="slider__controls">
-         <label class="slider__control" for="check1">&bull;</label>
-         <label class="slider__control" for="check2">&bull;</label>
-         <label class="slider__control" for="check3">&bull;</label>
+         <label class="slider__control" for="check1" tabindex="0">&bull;</label>
+         <label class="slider__control" for="check2" tabindex="0">&bull;</label>
+         <label class="slider__control" for="check3" tabindex="0">&bull;</label>
        </div>
 
      </article>
@@ -461,7 +464,7 @@
  </article>
 
 <article class="modal-map">
-  <button class="modal-close  modal-close--map"><span class="visually-hidden">Закрыть</span></button>
+  <button class="modal-close  modal-close--map" tabindex="0"><span class="visually-hidden">Закрыть</span></button>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1124559361047!2d37.528458585274336!3d55.68703259644285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1502983481022" width="960" height="560" style="border:0" allowfullscreen></iframe>
 </article>
 
