--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@
     </div>
 
        <div class="slider__controls">
-         <label class="slider__control" for="check1" tabindex="0">
+         <label class="slider__control" for="check1">
            <span class="visually-hidden">Первый слайд</span>
          </label>
-         <label class="slider__control" for="check2" tabindex="0">
+         <label class="slider__control" for="check2">
            <span class="visually-hidden">Второй слайд</span>
          </label>
-         <label class="slider__control" for="check3" tabindex="0">
+         <label class="slider__control" for="check3">
            <span class="visually-hidden">Третий слайд</span>
          </label>
        </div>
@@ -279,19 +279,19 @@
        <input class="services__check3  visually-hidden" type="radio" name="radio" id="radio3">
 
        <div class="services__controls">
-         <label class="services__control" for="radio1" tabindex="0">
+         <label class="services__control" for="radio1">
            <span class="button  button--services">
              Доставка
            </span>
          </label>
 
-         <label class="services__control" for="radio2" tabindex="0">
+         <label class="services__control" for="radio2">
            <span class="button  button--services">
              Гарантия
            </span>
          </label>
 
-         <label class="services__control" for="radio3" tabindex="0">
+         <label class="services__control" for="radio3">
            <span class="button  button--services">
              Кредит
            </span>
@@ -371,7 +371,6 @@
            Вы&nbsp;можете забрать товар сами, заехав в&nbsp;наш офис. Заодно, вы&nbsp;сможете проверить работоспособность покупки. Всякое бывает.
          </p>
          <a class="info-block__map" href=""></a>
-         <!-- 2 модификатора норм/нет? для js нужна кнопка -->
          <a class="button  button--info  button--modal" href="#">Напишите нам</a>
        </section>
 
@@ -445,7 +444,6 @@
 
    </footer>
 
-<!-- Модальное окно -->
    <article class="feedback">
     <h2 class="visually-hidden">Форма обратной связи</h2>
 
