--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
    </footer>
 
-   <article class="feedback">
+   <article class="feedback" style="display:none">
     <h2 class="visually-hidden">Форма обратной связи</h2>
 
      <form class="feedback__form" method="post" action="#">
@@ -472,7 +472,7 @@
 
  </article>
 
-<article class="modal-map">
+<article class="modal-map" style="display:none">
   <h2 class="visually-hidden">Как нас найти</h2>
 
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1124559361047!2d37.528458585274336!3d55.68703259644285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1502983481022" width="960" height="560" style="border:0" allowfullscreen></iframe>
