--- a/catalog.html
+++ b/catalog.html
@@ -338,7 +338,7 @@
 
   <footer class="footer">
 
-    <div class="footer__inner">
+    <div class="footer__block">
       <a class="logo  logo--footer" href="index.html">Device</a>
       <div class="footer__user-block">
         <a class="footer__link" href="#">
@@ -359,7 +359,7 @@
       </div>
     </div>
 
-    <div class="footer__inner">
+    <div class="footer__block">
       <p class="footer__address">
         г. Москва, ул. Строителей, 15
       </p>
@@ -371,7 +371,7 @@
       <a class="footer__link  footer__link--phone" href="tel:+7(495)495-95-95">Тел.: +7 (495) 495-95-95</a>
     </div>
 
-    <div class="footer__inner">
+    <div class="footer__block">
       <section class="socials">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <a class="socials__link" href="#">
