--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
        </a>
      </section>
 
+
      <article class="services">
 
        <div class="services__inner">
@@ -334,6 +335,7 @@
       </div>
      </article>
 
+
      <section class="popular-brands">
        <h2 class="visually-hidden">Популярные бренды</h2>
        <a class="popular-brands__link  popular-brands__link--brand1" href="#">DJI</a>
@@ -370,7 +372,7 @@
          <p class="info-block__description">
            Вы&nbsp;можете забрать товар сами, заехав в&nbsp;наш офис. Заодно, вы&nbsp;сможете проверить работоспособность покупки. Всякое бывает.
          </p>
-         <a class="info-block__map" href=""></a>
+         <a class="info-block__map" href="#"></a>
          <a class="button  button--info  button--modal" href="#">Напишите нам</a>
        </section>
 
@@ -380,7 +382,7 @@
 
    <footer class="footer">
 
-     <div class="footer__inner">
+     <div class="footer__block">
        <a class="logo  logo--footer" href="index.html">Device</a>
        <div class="footer__user-block">
          <a class="footer__link" href="#">
@@ -401,7 +403,7 @@
        </div>
      </div>
 
-     <div class="footer__inner">
+     <div class="footer__block">
        <p class="footer__address">
          г. Москва, ул. Строителей, 15
        </p>
@@ -413,7 +415,7 @@
        <a class="footer__link  footer__link--phone" href="tel:+7(495)495-95-95">Тел.: +7 (495) 495-95-95</a>
      </div>
 
-     <div class="footer__inner">
+     <div class="footer__block">
        <section class="socials">
          <h2 class="visually-hidden">Мы в социальных сетях</h2>
          <a class="socials__link" href="#">
