--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы
             не&nbsp;пропускать занятия и&nbsp;соблюдать диету.
           </p>
-          <a class="button  button--slider" href="#">
+          <a class="button  button--slider" href="#" tabindex="-1">
             Подробнее
           </a>
 
@@ -204,7 +204,7 @@
            <p class="slider__description">
              Этот обычный, на&nbsp;первый взгляд, квадрокоптер оснащен   мощным&nbsp;лазером, замаскированным под стандартную камеру.
            </p>
-           <a class="button  button--slider" href="#">
+           <a class="button  button--slider" href="#" tabindex="-1">
              Подробнее
            </a>
 
@@ -372,7 +372,9 @@
          <p class="info-block__description">
            Вы&nbsp;можете забрать товар сами, заехав в&nbsp;наш офис. Заодно, вы&nbsp;сможете проверить работоспособность покупки. Всякое бывает.
          </p>
-         <a class="info-block__map" href="#"></a>
+         <a class="info-block__map" href="#">
+           <span class="visually-hidden">Как нас найти</span>
+         </a>
          <a class="button  button--info  button--modal" href="#">Напишите нам</a>
        </section>
 
@@ -453,12 +455,12 @@
 
        <label class="feedback__label  feedback__label--name">
          Ваше имя:<br>
-         <input class="feedback__input" type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" required autofocus>
+         <input class="feedback__input" type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" autofocus>
        </label>
 
        <label class="feedback__label  feedback__label--email">
          Ваш e-mail:<br>
-         <input class="feedback__input" type="email" name="email" value="" placeholder="Для отправки ответа" required>
+         <input class="feedback__input" type="email" name="email" value="" placeholder="Для отправки ответа">
        </label>
 
        <label class="feedback__label">
