--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
        <form class="search-form" method="get" action="/">
 
          <label class="search-form__label" for="search">
+           <span class="visually-hidden">Строка поиска</span>
          </label>
 
          <input class="search-form__input" type="search" name="search-field" id="search" placeholder="Поиск по сайту">
@@ -485,6 +486,6 @@
 
 </article>
 
-  <script src="js/modal.js"></script>
+  <script src="js/modal.min.js"></script>
   </body>
 </html>
