--- a/catalog.html
+++ b/catalog.html
@@ -26,6 +26,7 @@
         <form class="search-form" method="get" action="/">
 
            <label class="search-form__label" for="search">
+             <span class="visually-hidden">Строка поиска</span>
            </label>
 
            <input class="search-form__input" type="search" name="search-field" id="search" placeholder="Поиск по сайту">
