--- a/catalog.html
+++ b/catalog.html
@@ -196,10 +196,10 @@
            <div class="filter__scale">
              <div class="filter__bar"></div>
              <div class="filter__bar  filter__bar--active"></div>
-             <div class="filter__control" style="left:-5px" tabindex="0">
+             <div class="filter__control  filter__control--min" tabindex="0">
               <span class="visually-hidden">Минимальная цена</span>
              </div>
-             <div class="filter__control" style="left:110px" tabindex="0">
+             <div class="filter__control  filter__control--max" tabindex="0">
                <span class="visually-hidden">Максимальная цена</span>
              </div>
            </div>
