--- a/index.html
+++ b/index.html
@@ -373,10 +373,10 @@
          <p class="info-block__description">
            Вы&nbsp;можете забрать товар сами, заехав в&nbsp;наш офис. Заодно, вы&nbsp;сможете проверить работоспособность покупки. Всякое бывает.
          </p>
-         <a class="info-block__map" href="#">
+         <a class="info-block__map" href="map.html">
            <span class="visually-hidden">Как нас найти</span>
          </a>
-         <a class="button  button--info  button--modal" href="#">Напишите нам</a>
+         <a class="button  button--info  button--modal" href="feedback.html">Напишите нам</a>
        </section>
 
      </article>
@@ -449,23 +449,23 @@
 
    </footer>
 
-   <article class="feedback" style="display:none">
+   <article class="feedback">
     <h2 class="visually-hidden">Форма обратной связи</h2>
 
      <form class="feedback__form" method="post" action="#">
 
        <label class="feedback__label  feedback__label--name">
-         Ваше имя:<br>
+         Ваше имя:
          <input class="feedback__input" type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" autofocus>
        </label>
 
        <label class="feedback__label  feedback__label--email">
-         Ваш e-mail:<br>
+         Ваш e-mail:
          <input class="feedback__input" type="email" name="email" value="" placeholder="Для отправки ответа">
        </label>
 
        <label class="feedback__label">
-         Текст письма:<br>
+         Текст письма:
          <textarea class="feedback__input  feedback__input--field" name="text" placeholder="В свободной форме"></textarea>
        </label>
 
@@ -477,7 +477,7 @@
 
  </article>
 
-<article class="modal-map" style="display:none">
+<article class="modal-map">
   <h2 class="visually-hidden">Как нас найти</h2>
 
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1124559361047!2d37.528458585274336!3d55.68703259644285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1502983481022" width="960" height="560" style="border:0" allowfullscreen></iframe>
